--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(co)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(co main.cpp headers/readfile.h headers/global.h src/readfile.cpp headers/lex.h src/lex.cpp src/global.cpp)
+add_executable(co main.cpp headers/readfile.h headers/global.h src/readfile.cpp headers/lex.h src/lex.cpp src/global.cpp headers/table.h src/table.cpp headers/sdt.h src/sdt.cpp headers/quadruple.h src/quadruple.cpp)
